--- a/new.html
+++ b/new.html
@@ -178,7 +178,7 @@
 </head>
 <body>
     <header>
-        < img src="https://ts4.tc.mm.bing.net/th/id/OIP-C.CGkq6sDrJqmc39ii-sZEsQAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="张三" class="profile-img">
+        < img sre="https://ts4.tc.mm.bing.net/th/id/OIP-C.CGkq6sDrJqmc39ii-sZEsQAAAA?rs=1&pid=ImgDetMain&o=7&rm=3" alt="张三" class="profile-img">
         <h1>张三</h1>
         <p class="title">全栈开发工程师 | 技术爱好者</p >
     </header>
